@@ -74,6 +74,20 @@ module PageObject
   end
 
   #
+  # Add a new javascript framework to page-object.  The module passed
+  # in must adhere to the same prototype as the JQuery and Prototype
+  # modules.
+  #
+  # @param [Symbol] the name used to reference the framework in
+  # subsequent calls
+  # @param [Module] a module that has the necessary methods to perform
+  # the required actions.
+  #
+  def self.add_framework(key, framework)
+    PageObject::JavascriptFrameworkFacade.add_framework(key, framework)
+  end
+
+  #
   # get the current page url
   #
   def current_url
